--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,22 @@
-spring.application.name=helloSpringDataJpa
+spring.application.name=helloSpringDataJpaApp
+spring.web.resources.add-mappings=false
+error.whitelabel.enabled=false
 
-# context path:  http://localhost:8080/helloSpringDataJpa
-server.servlet.context-path=/helloSpringDataJpa
+logging.level.org.springframework=DEBUG
+logging.level.kr.ac.hansung.cse.hellospringdatajpa=DEBUG
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+
+# context path:  http://localhost:8080/helloSpringDataJpaApp
+
+server.servlet.context-path=/helloSpringDataJpaApp
 
 # === DataSource ===
 spring.datasource.url=jdbc:mysql://localhost:3306/sales?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=csedbadmin
+spring.datasource.password=hansung
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # === SQL 초기화 (개발 프로파일 전용) ===
@@ -25,3 +35,5 @@ spring.jpa.defer-datasource-initialization=true
 
 # === Logging ===
 logging.level.kr.ac.hansung=trace
+logging.level.org.springframework.security=trace
+logging.level.org.springframework.web=debug
